tests/baselines/reference/nonPrimitiveConstraintOfIndexAccessType.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(30,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
  Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts (1 errors) ====
    // test for #15371
    function f<T extends object, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function g<T extends null, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function h<T extends undefined, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function i<T extends void, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function j<T extends never, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function k<T extends number, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function o<T extends string, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function l<T extends {}, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function m<T extends { a: number }, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
    }
    function n<T extends { [s: string]: number }, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    }
    